package speedfast;

/**
 * Operación de cancelación de un envío.
 */
public interface Cancelable {

    void cancelar();
}
