package speedfast;

/**
 * Operación de despacho de un pedido en curso.
 */
public interface Despachable {

    void despachar();
}
