package speedfast;

/**
 * Consulta del historial de entregas.
 */
public interface Rastreable {

    void verHistorial();
}
